feat: remove unused React and Vue component files

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,8 +8,8 @@
   "experimentalDecorators": true,
   "forceConsistentCasingInFileNames": true,
   "lib": ["dom", "es2022"],
-  "module": "es2022",
-  "moduleResolution": "node",
+  "module": "esnext",
+  "moduleResolution": "bundler",
   "noImplicitAny": true,
   "noImplicitReturns": true,
   "noUnusedLocals": true,
@@ -19,7 +19,8 @@
   "strictPropertyInitialization": false,
   "target": "es2022",
   "jsx": "react",
-  // "baseUrl": ".",
+  "resolveJsonModule": true,
+  "isolatedModules": true,
   "paths": {
    "@stencil-test/stencil": ["./packages/stencil"],
    "@stencil-test/stencil/loader": ["./packages/stencil/loader"],
