--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,36 @@
 node_modules/
+
+# Build outputs
+dist/
+build/
+
+# Auto-generated files
+# Stencil auto-generated files
+packages/stencil/www/
+packages/stencil/loader/
+
+# React auto-generated files  
+packages/react/lib/components/stencil-generated/
+packages/react/dist/
+
+# Vue auto-generated files
+packages/vue/lib/components.ts
+packages/vue/dist/
+
+# TypeScript build info
+*.tsbuildinfo
+
+# IDE files
+.vscode/
+.idea/
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# Logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
