--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
  "scripts": {
   "clean": "lerna clean -y",
   "watch": "lerna run watch --stream",
-  "build": "lerna run build --concurrency=3",
+  "build": "npm run build:stencil && npm run build:vue && npm run build:react",
+  "build:stencil": "lerna run build --scope @stencil-test/stencil",
+  "build:vue": "lerna run build --scope @stencil-test/vue",
+  "build:react": "lerna run build --scope @stencil-test/react",
+  "build:rest": "lerna run build --ignore @stencil-test/stencil --concurrency=2",
   "dev": "lerna run dev:start --stream"
  },
  "devDependencies": {
