--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -17,7 +17,7 @@
  ],
  "scripts": {
   "test": "node ./__tests__/react.test.js",
-  "build": "npm run tsc",
+  "build": "node fix-components.js && npm run tsc",
   "watch": "tsc -p . -w",
   "tsc": "tsc -p ."
  },
