--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -16,7 +16,7 @@
  ],
  "scripts": {
   "test": "node ./__tests__/vue.test.js",
-  "build": "npm run tsc",
+  "build": "node fix-components.js && npm run tsc",
   "watch": "tsc -p . -w",
   "tsc": "tsc -p ."
  },
