feat: update package.json to include playground workspace and add dependencies for Stencil and React
fix: modify fix-components.js to check for existence of components.ts and update import paths

refactor: change index.ts to export from new components path and remove generated types

chore: update package.json for React to include lib in files and add peer dependencies

chore: update Stencil package.json to correct component paths in exports

chore: adjust Stencil config to output components to the new directory structure

chore: update Vue package.json to include dist in files and add peer dependencies

feat: update Vue playground App.vue to use MyComponent from Stencil

--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -13,13 +13,22 @@
   "test": "__tests__"
  },
  "files": [
-  "dist"
+  "dist",
+  "lib"
  ],
  "scripts": {
   "test": "node ./__tests__/react.test.js",
   "build": "node fix-components.js && npm run tsc",
   "watch": "tsc -p . -w",
   "tsc": "tsc -p ."
+ },
+ "dependencies": {
+  "@stencil-test/stencil": "^0.0.1",
+  "@stencil/react-output-target": "^1.2.0"
+ },
+ "peerDependencies": {
+  "react": ">=16.8.0",
+  "react-dom": ">=16.8.0"
  },
  "devDependencies": {
   "@types/react": "^19.2.2",
