--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
  "name": "root",
  "private": true,
  "workspaces": [
-  "packages/*"
+  "packages/*",
+  "playground/*"
  ],
  "scripts": {
   "clean": "lerna clean -y",
