--- a/packages/stencil/package.json
+++ b/packages/stencil/package.json
@@ -13,9 +13,9 @@
       "import": "./dist/stencil-test/stencil-test.esm.js",
       "require": "./dist/stencil-test/stencil-test.cjs.js"
     },
-    "./dist/components/*.d.ts": {
-      "import": "./dist/components/*.js",
-      "types": "./dist/components/*.d.ts"
+    "./dist/components/my-component.js": {
+      "import": "./dist/components/my-component.js",
+      "types": "./dist/components/my-component.d.ts"
     },
     "./loader": {
       "import": "./loader/index.js",
