--- a/packages/stencil/tsconfig.json
+++ b/packages/stencil/tsconfig.json
@@ -16,6 +16,6 @@
     "forceConsistentCasingInFileNames": true,
     "strict": true
   },
-  "include": ["src"],
-  "exclude": ["node_modules"]
+  "include": ["src", "src/types/global.d.ts"],
+  "exclude": ["node_modules", "src/**/*.stories.ts"]
 }
