--- a/packages/stencil/package.json
+++ b/packages/stencil/package.json
@@ -1,54 +1,63 @@
 {
-  "name": "@stencil-test/stencil",
-  "version": "0.0.1",
-  "description": "Stencil Component Starter",
-  "main": "dist/index.cjs.js",
-  "module": "dist/index.js",
-  "types": "dist/types/index.d.ts",
-  "collection": "dist/collection/collection-manifest.json",
-  "collection:main": "dist/collection/index.js",
-  "unpkg": "dist/stencil-test/stencil-test.esm.js",
-  "exports": {
-    ".": {
-      "import": "./dist/stencil-test/stencil-test.esm.js",
-      "require": "./dist/stencil-test/stencil-test.cjs.js"
-    },
-    "./dist/components/my-component.js": {
-      "import": "./dist/components/my-component.js",
-      "types": "./dist/components/my-component.d.ts"
-    },
-    "./loader": {
-      "import": "./loader/index.js",
-      "require": "./loader/index.cjs",
-      "types": "./loader/index.d.ts"
-    }
+ "name": "@stencil-test/stencil",
+ "version": "0.0.1",
+ "description": "Stencil Component Starter",
+ "main": "dist/index.cjs.js",
+ "module": "dist/index.js",
+ "types": "dist/types/index.d.ts",
+ "collection": "dist/collection/collection-manifest.json",
+ "collection:main": "dist/collection/index.js",
+ "unpkg": "dist/stencil-test/stencil-test.esm.js",
+ "exports": {
+  ".": {
+   "import": "./dist/stencil-test/stencil-test.esm.js",
+   "require": "./dist/stencil-test/stencil-test.cjs.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/stenciljs/component-starter.git"
+  "./dist/components/my-component.js": {
+   "import": "./dist/components/my-component.js",
+   "types": "./dist/components/my-component.d.ts"
   },
-  "files": [
-    "dist/",
-    "loader/"
-  ],
-  "scripts": {
-    "build": "stencil build",
-    "start": "stencil build --dev --watch --serve",
-    "test": "stencil test --spec --e2e",
-    "test.watch": "stencil test --spec --e2e --watchAll",
-    "generate": "stencil generate"
-  },
-  "devDependencies": {
-    "@stencil/core": "^4.27.1",
-    "@types/jest": "^29.5.14",
-    "@types/node": "^22.13.5",
-    "jest": "^29.7.0",
-    "jest-cli": "^29.7.0",
-    "puppeteer": "^24.3.0"
-  },
-  "license": "MIT",
-  "dependencies": {
-    "@stencil/react-output-target": "^1.2.0",
-    "@stencil/vue-output-target": "^0.11.8"
+  "./loader": {
+   "import": "./loader/index.js",
+   "require": "./loader/index.cjs",
+   "types": "./loader/index.d.ts"
   }
+ },
+ "repository": {
+  "type": "git",
+  "url": "https://github.com/stenciljs/component-starter.git"
+ },
+ "files": [
+  "dist/",
+  "loader/"
+ ],
+ "scripts": {
+  "build": "stencil build",
+  "start": "stencil build --dev --watch --serve",
+  "test": "stencil test --spec --e2e",
+  "test.watch": "stencil test --spec --e2e --watchAll",
+  "generate": "stencil generate",
+  "storybook": "storybook dev -p 6006",
+  "build-storybook": "storybook build"
+ },
+ "devDependencies": {
+  "@chromatic-com/storybook": "^4.1.1",
+  "@stencil/core": "^4.27.1",
+  "@stencil/eslint-plugin": "^1.1.0",
+  "@stencil/sass": "^3.2.2",
+  "@storybook/addon-a11y": "^9.1.10",
+  "@storybook/addon-docs": "^9.1.10",
+  "@storybook/addon-vitest": "^9.1.10",
+  "@storybook/web-components-vite": "^9.1.10",
+  "@types/jest": "^29.5.14",
+  "@types/node": "^22.13.5",
+  "jest": "^29.7.0",
+  "jest-cli": "^29.7.0",
+  "puppeteer": "^24.3.0"
+ },
+ "license": "MIT",
+ "dependencies": {
+  "@stencil/react-output-target": "^1.2.0",
+  "@stencil/vue-output-target": "^0.11.8"
+ }
 }
