chore: update Storybook configuration and dependencies
- Commented out the Stencil custom elements registration in Storybook preview.
- Added TypeScript types for React and React DOM in package.json.
- Introduced ESLint and related plugins for code quality.
- Updated the checkbox component's event name in the README.
- Added `skipLibCheck` option to tsconfig for improved type checking performance.

--- a/packages/stencil/tsconfig.json
+++ b/packages/stencil/tsconfig.json
@@ -14,7 +14,8 @@
     "jsxFactory": "h",
     "jsxFragmentFactory": "h.Fragment",
     "forceConsistentCasingInFileNames": true,
-    "strict": true
+    "strict": true,
+    "skipLibCheck": true
   },
   "include": ["src", "src/types/global.d.ts"],
   "exclude": ["node_modules", "src/**/*.stories.ts"]
