--- a/packages/stencil/package.json
+++ b/packages/stencil/package.json
@@ -51,6 +51,15 @@
   "@storybook/web-components-vite": "^9.1.10",
   "@types/jest": "^29.5.14",
   "@types/node": "^22.13.5",
+  "@types/react": "^19.2.2",
+  "@types/react-dom": "^19.2.2",
+  "eslint": "^9.37.0",
+  "eslint-config-prettier": "^10.1.8",
+  "eslint-plugin-import": "^2.32.0",
+  "eslint-plugin-jsx-a11y": "^6.10.2",
+  "eslint-plugin-prettier": "^5.5.4",
+  "eslint-plugin-simple-import-sort": "^12.1.1",
+  "eslint-plugin-storybook": "^9.1.10",
   "jest": "^29.7.0",
   "jest-cli": "^29.7.0",
   "puppeteer": "^24.3.0"
