--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -16,10 +16,9 @@
   "dist"
  ],
  "scripts": {
-  "test": "node ./__tests__/vue.test.js",
-  "build": "node fix-components.js && npm run tsc",
-  "watch": "tsc -p . -w",
-  "tsc": "tsc -p ."
+  "build": "tsc",
+  "clean": "rm -rf lib",
+  "dev": "tsc --watch"
  },
  "devDependencies": {
   "@types/node": "^24.9.1",
