feat: update lerna configuration, add new dev scripts, and modify package structure; enhance README with project setup and usage instructions

--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
   "build:vue": "lerna run build --scope @stencil-test/vue",
   "build:react": "lerna run build --scope @stencil-test/react",
   "build:rest": "lerna run build --ignore @stencil-test/stencil --concurrency=2",
+  "dev:stencil": "lerna run start --scope @stencil-test/stencil --stream",
+  "dev:react": "lerna run dev --scope react-dev --stream",
+  "dev:vue": "lerna run dev --scope vue-dev --stream",
   "dev": "lerna run dev:start --stream"
  },
  "devDependencies": {
