--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,9 @@ build/
 # Stencil auto-generated files
 packages/stencil/www/
 packages/stencil/loader/
+packages/stencil/.stencil/
+packages/stencil/dist/
+src/components.d.ts
 
 # React auto-generated files  
 packages/react/lib/components/components.ts
@@ -19,6 +22,56 @@ packages/vue/dist/
 
 # TypeScript build info
 *.tsbuildinfo
+
+# Cache directories
+.cache/
+.parcel-cache/
+.next/
+.nuxt/
+.vuepress/dist
+.temp
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# Coverage directory used by tools like istanbul
+coverage/
+*.lcov
+
+# nyc test coverage
+.nyc_output
+
+# Dependency directories
+jspm_packages/
+
+# Optional npm cache directory
+.npm
+
+# Optional eslint cache
+.eslintcache
+
+# Optional REPL history
+.node_repl_history
+
+# Output of 'npm pack'
+*.tgz
+
+# Yarn Integrity file
+.yarn-integrity
+
+# parcel-bundler cache (https://parceljs.org/)
+.cache
+.parcel-cache
+
+# Stores VSCode versions used for testing VSCode extensions
+.vscode-test
+
+# Temporary folders
+tmp/
+temp/
 
 # IDE files
 .vscode/
