--- a/packages/vue/tsconfig.json
+++ b/packages/vue/tsconfig.json
@@ -2,7 +2,9 @@
  "extends": "../../tsconfig.json",
  "compilerOptions": {
   "outDir": "./dist",
-  "skipLibCheck": true
+  "skipLibCheck": true,
+  "strict": false,
+  "noImplicitAny": false
  },
  "include": ["lib"],
  "exclude": ["node_modules"]
